package com.directi.training.dip.exercise_refactor;

import java.io.BufferedReader;
import java.io.IOException;

public class FileReader implements IReader {
    private final String filePath;
    
    public FileReader(String filePath) {
        this.filePath = filePath;
    }
    
    @Override
    public String read() throws IOException {
        StringBuilder content = new StringBuilder();
        try (BufferedReader reader = new BufferedReader(new java.io.FileReader(filePath))) {
            String line;
            while ((line = reader.readLine()) != null) {
                content.append(line);
            }
        }
        return content.toString();
    }
}