package com.directi.training.dip.exercise_refactor;

import java.io.IOException;

public interface IReader {
  String read() throws IOException;
}
