package com.directi.training.dip.exercise_refactor;

import java.io.IOException;

public interface IWriter {
  void write(String data) throws IOException;
}
